force-app/main/default/objects/GM_ACTIVITY__x/fields/UC1_EMP__c.field-meta.xml
<CustomField>
    <fullName>UC1_EMP__c</fullName>
    <description>UC1_EMP</description>
    <externalDeveloperName>UC1_EMP</externalDeveloperName>
    <label>UC1_EMP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>